Update for Stencyl 4.1.0 beta (b11582)